--- a/main.css
+++ b/main.css
@@ -1,10 +1,54 @@
+/* from Yindii I learned about the outline stuff and from Danielle I learned about the position stuff */
+
+/*1 text-align
+2 background-color
+3 font-family
+4 font-size
+5 font-weight
+6 color
+7 border-style
+8 text-shadow
+9 opacity
+10 text-decoration
+11 line-height
+12 letter-spacing
+13 word-spacing
+14 padding
+15 background-image
+16 background-repeat
+17 background-position
+18 font-style
+19 cursor
+20 width
+21 outline-color
+22 outline-style
+23 outline-width
+*/
+
+/*Create a new file called "main.css"
+*Add a link element to the head of your index.html file
+<link rel="stylesheet" href="main.css" type="text/css">
+*Edit the main.css file
+*add a declaration for each element in the body of your index.html file.
+*add properties to style the background color of each element.
+*add properties to style the border of each element.
+*add properties to style the font and text of each element.
+*Use at least 20 different properties. Include a list of these 20 at the TOP of your main.css file as a css comment.
+*Use at least 4 different units to set sizes of various aspects of your webpage.
+*Go learn something from 2 classmates; add a comment to your main.css file that describes what you learned.
+*View your index.html in the development server.
+*Validate your index.html file.
+*Validate your main.css file.
+*Copy this list of requirements and paste it into your "main.css" file as a css comment. Put an asterisk in front of each one that you did.
+*Upload to the production server with sftp.
+*View your index.html in the production server. */
 
 h1 {
 
 	text-align:center;
 	color:Coral; 
 	background-color:Bisque;
-	font-family:Courier New;
+	font-family:"Courier New";
 	font-size:80px;
 	background-image:url("http://www.clipartqueen.com/image-files/red-flower-yellow.png");
 	
@@ -24,7 +68,7 @@ h3 {
 	color:LightCoral;
 	
 	border-style:dashed;
-	font-family:Comic Sans MS;
+	font-family:"Comic Sans MS";
 	text-decoration:underline;
 	line-height:2.3;
 	letter-spacing:3px;
@@ -33,10 +77,13 @@ h3 {
 	
 }
 body {
-	background-image:url("http://www.flowermeaning.com/flower-pics/Poppy-3.jpg");
-	background-repeat:no-repeat;
+	background-image:url("https://s-media-cache-ak0.pinimg.com/originals/c7/1c/a6/c71ca65580e7197a2b0e429cae2d141a.png");
+	background-repeat:repeat;
 	background-position:center;
 	cursor:crosshair;
+	outline-color:pink;
+	outline-style:dotted;
+	outline-width:20px;
 
 	
 }
@@ -46,7 +93,7 @@ p {
 	font-style:italic;
 	padding:40px;
 	font-size:1.5rem;
-	font-family:Comic Sans MS;
+	font-family:"Comic Sans MS";
 	width:500px;
 }
 
