--- a/practicequiz1.css
+++ b/practicequiz1.css
@@ -1,12 +1,11 @@
-h1 {
-	color:yellow;
-	background-color:green;
-	border-width:5px;
-	font-family:Impact;
-	font-style:italic;
+main {
+	border-left:6px groove orange;
+	border-width:10px;
+	
+	
 }
 
-p1 {
+header {
 	color:blue;
 	background-color:red;
 	border-bottom-style:dashed;
@@ -15,6 +14,29 @@ p1 {
 	font-style:italic;
 	border-color:yellow;
 	font-size:15px;
+	padding:15px;
+	line-height:30px;
+}
+
+h1 {
+	color:yellow;
+	background-color:green;
+	border-width:5px;
+	font-family:Impact;
+	font-style:italic;
+	border-bottom-style:dashed;
+	margin:0px;
+	padding:0px;
+	margin-top:20px;
+	
+}
+
+p {
+	color:blue;
+	font-family:Arial;
+	font-size:15px;
+	
+	
 	
 	
 }
@@ -22,4 +44,21 @@ h2 {
 	color:yellow;
 	background-color:purple;
 	font-family:Arial;
+}
+h3 {
+	background-color:yellow;
+	color:purple;
+	font-family:Arial;
+	border-top-style:dashed;
+	border-width:2px;
+}
+footer {
+	
+	border-left:10px solid red;
+	line-height:30px;
+	border-right:10px solid blue;
+	color:blue;
+	border-top:1px dotted black;
+}
 
+	
