--- a/main.css
+++ b/main.css
@@ -110,14 +110,21 @@ nav {
 	border:10px groove LightPink;
 	font-family:"Comic Sans MS";
 	color:DarkSalmon;
+	font-size:20px;
+	margin-top:15px;
 }
-heading {
+h4 {
 	font-size:30px;
 	color:LightCoral;
 	font-family:"Comic Sans MS";
 }
-ul {
+ul, ol {
 	font-family:"Comic Sans MS";
 	color:LightCoral;
-	
+	margin:30px;
+}
+ol li {
+	border:2px dotted pink;
+	background-color:white;
+	opacity:0.8;
 }
